--- a/projeto2/Makefile
+++ b/projeto2/Makefile
@@ -111,6 +111,7 @@ obj-$(CONFIG_PERF_EVENTS)		+= perf_regs.o
 obj-$(CONFIG_TRACING)			+= tracepoint.o
 
 obj-y                   += forkn.o
+obj-y                   += mycall.o
 
 ###
 # 64 bit specific files
